--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
   },
   "dependencies": {
     "element-resize-detector": "^1.1.15",
-    "interactjs": "^1.6.3"
+    "interactjs": "^1.6.3",
+    "lodash": "^4.17.15",
+    "view-design": "^4.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.4.1",
